0031793: Draw Harness, vmanipulator - disable sorting picking result workaround

AIS_InteractiveContext::SetPickClosest() has been removed from vmanipulator command,
and test cases using the manipulator have been updated.